# pomodoro

./: .gitignore  .prettierrc  README.md  bun.lockb  components.json  default.nix  flake.nix  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.js
.github/workflows/: release.yaml
src/: app.css  constants.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Card.svelte  Count.svelte  ProgressBar.svelte  SettingDialog.svelte  Tasks.svelte
src/components/buttons/: SettingButton.svelte  SkipButton.svelte  ToggleButton.svelte
src/components/task/: AddTask.svelte  ClearMenu.svelte  EditTask.svelte  TaskItem.svelte  Tasks.svelte
src/components/ui/alert/: alert-description.svelte  alert-title.svelte  alert.svelte
src/components/ui/context-menu/: context-menu-checkbox-item.svelte  context-menu-content.svelte  context-menu-item.svelte  context-menu-label.svelte  context-menu-radio-item.svelte  context-menu-separator.svelte  context-menu-shortcut.svelte  context-menu-sub-content.svelte  context-menu-sub-trigger.svelte
src/components/ui/dialog/: dialog-content.svelte  dialog-description.svelte  dialog-overlay.svelte
src/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-label.svelte  (+5 more)
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/components/: Card.svelte  Count.svelte  ProgressBar.svelte
src/stores/: edit-task.ts
(+7 files in other folders)
