[package]
name = "pomodoro"
version = "0.7.1"
description = "Minimalistic Pomodoro Timer App Written In Tauri and SvelteKit"
authors = ["tfkhdyt"]
license = ""
repository = ""
default-run = "pomodoro"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6", features = [ "process-exit",
  "fs-create-dir",
  "fs-write-file",
  "fs-read-file",
  "fs-read-dir",
  "fs-exists",
  "path-all",
  "dialog-confirm",
  "window-set-title",
  "notification-all",
] }
rodio = "0.18"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
